# Photogrammetry-with-CPP

./: .gitignore  CMakeLists.txt  README.md
book/: CMakeLists.txt  Makefile  Makefile-manual  README.md  photogrammetry-with-cpp.tex
book/appendix-A/: Coordinate-Lookup-Table.tex  overview.tex
book/appendix-B/: overview.tex
book/chapter1/: gis-data-formats.tex  overview.tex  spherical-vs-projected.tex
book/chapter1/diagrams/: sphere.py
book/chapter2/: gdal-overview.tex  geographiclib-overview.tex  overview.tex
book/chapter3/: coordinate-conversions.tex  distance-measurements.tex  gdal-examples.tex  geographiclib-geoid.tex  liblas-examples.tex  overview.tex
book/chapter3/diagrams/: diagram-generator.py  globe.py
book/chapter4/: gdal-image-load.tex  overview.tex
book/chapter5/: overview.tex
book/chapter6/: geographiclib-geoid.tex  overview.tex
book/core/: bibliography.bib  front_matter.tex  structure.tex
cmake/Modules/: UseLATEX.cmake
code/: CMakeLists.txt  README.md
code/chapter3/: CMakeLists.txt  gdal-geographic-to-utm.cpp  geographiclib-coordinate-conversion.cpp  geographiclib-ellipsoid-distance.cpp  great-circle-distance.cpp  mgrs_to_utm.cpp
code/chapter4/: CMakeLists.txt  gdal-load-image.cpp
code/chapter6/: CMakeLists.txt  gdal-tidal.cpp  geographiclib-magnetic-query.cpp
code/chapter9/: CMakeLists.txt  Makefile-fbx  OSG_Render_Utilities.cpp  OSG_Render_Utilities.hpp  fbx-render-terrain.cpp  osg-render-terrain.cpp
code/common/: CMakeLists.txt  Coordinate_Utilities.cpp  Coordinate_Utilities.hpp  FBX_Utilities.cpp  FBX_Utilities.hpp  Model_Utilities.cpp  Model_Utilities.hpp  OSG_Utilities.cpp  OSG_Utilities.hpp  Raster_Utilities.cpp  Raster_Utilities.hpp
data/: Coordinate-Lookup-Table.csv
