#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    11/10/2015
#
#    Purpose: Build common utilities
#


#--------------------------------#
#-       Common Utilities       -#
#--------------------------------#
add_library( common-utilities
             Coordinate_Utilities.cpp
             Coordinate_Utilities.hpp )


